--- a/www/application/views/TestDocuments/code-coverage/BlueTape.php.html
+++ b/www/application/views/TestDocuments/code-coverage/BlueTape.php.html
@@ -60,14 +60,14 @@
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;7</div></td>
        <td class="danger small"><abbr title="Change Risk Anti-Patterns (CRAP) Index">CRAP</abbr></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="48.57" aria-valuemin="0" aria-valuemax="100" style="width: 48.57%">
-           <span class="sr-only">48.57% covered (danger)</span>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="54.29" aria-valuemin="0" aria-valuemax="100" style="width: 54.29%">
+           <span class="sr-only">54.29% covered (warning)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">48.57%</div></td>
-       <td class="danger small"><div align="right">17&nbsp;/&nbsp;35</div></td>
+       <td class="warning small"><div align="right">54.29%</div></td>
+       <td class="warning small"><div align="right">19&nbsp;/&nbsp;35</div></td>
       </tr>
 
       <tr>
@@ -88,15 +88,15 @@
 </td>
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;7</div></td>
-       <td class="danger small">87.84</td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="48.57" aria-valuemin="0" aria-valuemax="100" style="width: 48.57%">
-           <span class="sr-only">48.57% covered (danger)</span>
+       <td class="danger small">68.24</td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="54.29" aria-valuemin="0" aria-valuemax="100" style="width: 54.29%">
+           <span class="sr-only">54.29% covered (warning)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">48.57%</div></td>
-       <td class="danger small"><div align="right">17&nbsp;/&nbsp;35</div></td>
+       <td class="warning small"><div align="right">54.29%</div></td>
+       <td class="warning small"><div align="right">19&nbsp;/&nbsp;35</div></td>
       </tr>
 
       <tr>
@@ -214,15 +214,15 @@
 </td>
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
-       <td class="danger small">6.00</td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50.00" aria-valuemin="0" aria-valuemax="100" style="width: 50.00%">
-           <span class="sr-only">50.00% covered (danger)</span>
+       <td class="danger small">4.07</td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="83.33" aria-valuemin="0" aria-valuemax="100" style="width: 83.33%">
+           <span class="sr-only">83.33% covered (warning)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">50.00%</div></td>
-       <td class="danger small"><div align="right">3&nbsp;/&nbsp;6</div></td>
+       <td class="warning small"><div align="right">83.33%</div></td>
+       <td class="warning small"><div align="right">5&nbsp;/&nbsp;6</div></td>
       </tr>
 
       <tr>
@@ -333,8 +333,8 @@
      <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 79" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="79"></a><a href="#79">79</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">=</span><span class="default">&nbsp;</span><span class="default">intval</span><span class="keyword">(</span><span class="default">'20'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">substr</span><span class="keyword">(</span><span class="default">$semesterCode</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">0</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">2</span><span class="keyword">)</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
      <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 80" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="80"></a><a href="#80">80</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="default">switch</span><span class="default">&nbsp;</span><span class="keyword">(</span><span class="default">substr</span><span class="keyword">(</span><span class="default">$semesterCode</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">2</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">1</span><span class="keyword">)</span><span class="keyword">)</span><span class="default">&nbsp;</span><span class="keyword">{</span></td></tr>
      <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 81" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="81"></a><a href="#81">81</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">case</span><span class="default">&nbsp;</span><span class="default">'1'</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">'Ganjil&nbsp;'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">'/'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="keyword">(</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">+</span><span class="default">&nbsp;</span><span class="default">1</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
-     <tr class="danger"><td><div align="right"><a name="82"></a><a href="#82">82</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">case</span><span class="default">&nbsp;</span><span class="default">'2'</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">'Genap&nbsp;'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="keyword">(</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">-</span><span class="default">&nbsp;</span><span class="default">1</span><span class="keyword">)</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">'/'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">$year</span><span class="keyword">;</span></td></tr>
-     <tr class="danger"><td><div align="right"><a name="83"></a><a href="#83">83</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">case</span><span class="default">&nbsp;</span><span class="default">'4'</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">'Padat&nbsp;'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="keyword">(</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">-</span><span class="default">&nbsp;</span><span class="default">1</span><span class="keyword">)</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">'/'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">$year</span><span class="keyword">;</span></td></tr>
+     <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 82" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="82"></a><a href="#82">82</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">case</span><span class="default">&nbsp;</span><span class="default">'2'</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">'Genap&nbsp;'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="keyword">(</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">-</span><span class="default">&nbsp;</span><span class="default">1</span><span class="keyword">)</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">'/'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">$year</span><span class="keyword">;</span></td></tr>
+     <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 83" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="83"></a><a href="#83">83</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">case</span><span class="default">&nbsp;</span><span class="default">'4'</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">'Padat&nbsp;'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="keyword">(</span><span class="default">$year</span><span class="default">&nbsp;</span><span class="keyword">-</span><span class="default">&nbsp;</span><span class="default">1</span><span class="keyword">)</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">'/'</span><span class="default">&nbsp;</span><span class="keyword">.</span><span class="default">&nbsp;</span><span class="default">$year</span><span class="keyword">;</span></td></tr>
      <tr><td><div align="right"><a name="84"></a><a href="#84">84</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
      <tr class="danger"><td><div align="right"><a name="85"></a><a href="#85">85</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">FALSE</span><span class="keyword">;</span></td></tr>
      <tr class="warning"><td><div align="right"><a name="86"></a><a href="#86">86</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
@@ -362,7 +362,7 @@
      <span class="warning"><strong>Dead Code</strong></span>
     </p>
     <p>
-     <small>Generated by <a href="https://github.com/sebastianbergmann/php-code-coverage" target="_top">php-code-coverage 7.0.1</a> using <a href="https://secure.php.net/" target="_top">PHP 7.2.3</a> with <a href="https://xdebug.org/">Xdebug 2.7.0beta1</a> at Thu Feb 14 6:24:12 CET 2019.</small>
+     <small>Generated by <a href="https://github.com/sebastianbergmann/php-code-coverage" target="_top">php-code-coverage 7.0.1</a> using <a href="https://secure.php.net/" target="_top">PHP 7.2.3</a> with <a href="https://xdebug.org/">Xdebug 2.7.0beta1</a> at Thu Feb 14 6:49:44 CET 2019.</small>
     </p>
     <a title="Back to the top" id="toplink" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 11L6 5l-6 6h12z"/></svg>
