--- a/www/application/views/TestDocuments/code-coverage/index.html
+++ b/www/application/views/TestDocuments/code-coverage/index.html
@@ -1,118 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <title>Code Coverage for C:\xampp\htdocs\BlueTape\www\application\libraries</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="_css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="_css/octicons.css" rel="stylesheet" type="text/css">
-  <link href="_css/style.css" rel="stylesheet" type="text/css">
-  <link href="_css/custom.css" rel="stylesheet" type="text/css">
- </head>
- <body>
-  <header>
-   <div class="container-fluid">
-    <div class="row">
-     <div class="col-md-12">
-      <nav aria-label="breadcrumb">
-       <ol class="breadcrumb">
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="UTF-8">
+  <title>Code Coverage for C:\xampp\htdocs\BlueTape\www\application\libraries</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="_css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="_css/octicons.css" rel="stylesheet" type="text/css">
+  <link href="_css/style.css" rel="stylesheet" type="text/css">
+  <link href="_css/custom.css" rel="stylesheet" type="text/css">
+ </head>
+ <body>
+  <header>
+   <div class="container-fluid">
+    <div class="row">
+     <div class="col-md-12">
+      <nav aria-label="breadcrumb">
+       <ol class="breadcrumb">
          <li class="breadcrumb-item active">C:\xampp\htdocs\BlueTape\www\application\libraries</li>
          <li class="breadcrumb-item">(<a href="dashboard.html">Dashboard</a>)</li>
-
-       </ol>
-      </nav>
-     </div>
-    </div>
-   </div>
-  </header>
-  <div class="container-fluid">
-   <div class="table-responsive">
-    <table class="table table-bordered">
-     <thead>
-      <tr>
-       <td>&nbsp;</td>
-       <td colspan="9"><div align="center"><strong>Code Coverage</strong></div></td>
-      </tr>
-      <tr>
-       <td>&nbsp;</td>
-       <td colspan="3"><div align="center"><strong>Lines</strong></div></td>
-       <td colspan="3"><div align="center"><strong>Functions and Methods</strong></div></td>
-       <td colspan="3"><div align="center"><strong>Classes and Traits</strong></div></td>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td class="danger">Total</td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="48.57" aria-valuemin="0" aria-valuemax="100" style="width: 48.57%">
-           <span class="sr-only">48.57% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">48.57%</div></td>
-       <td class="danger small"><div align="right">17&nbsp;/&nbsp;35</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;7</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
-      </tr>
-
-      <tr>
-       <td class="danger"><img src="_icons/file-code.svg" class="octicon" /><a href="BlueTape.php.html">BlueTape.php</a></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="48.57" aria-valuemin="0" aria-valuemax="100" style="width: 48.57%">
-           <span class="sr-only">48.57% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">48.57%</div></td>
-       <td class="danger small"><div align="right">17&nbsp;/&nbsp;35</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;7</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
-      </tr>
-
-
-     </tbody>
-    </table>
-   </div>
-   <footer>
-    <hr/>
-    <h4>Legend</h4>
-    <p>
-     <span class="danger"><strong>Low</strong>: 0% to 50%</span>
-     <span class="warning"><strong>Medium</strong>: 50% to 90%</span>
-     <span class="success"><strong>High</strong>: 90% to 100%</span>
-    </p>
-    <p>
-     <small>Generated by <a href="https://github.com/sebastianbergmann/php-code-coverage" target="_top">php-code-coverage 7.0.1</a> using <a href="https://secure.php.net/" target="_top">PHP 7.2.10</a> with <a href="https://xdebug.org/">Xdebug 2.7.0beta1</a> at Mon Feb 11 10:44:09 CET 2019.</small>
-    </p>
-   </footer>
-  </div>
- </body>
-</html>
+
+       </ol>
+      </nav>
+     </div>
+    </div>
+   </div>
+  </header>
+  <div class="container-fluid">
+   <div class="table-responsive">
+    <table class="table table-bordered">
+     <thead>
+      <tr>
+       <td>&nbsp;</td>
+       <td colspan="9"><div align="center"><strong>Code Coverage</strong></div></td>
+      </tr>
+      <tr>
+       <td>&nbsp;</td>
+       <td colspan="3"><div align="center"><strong>Lines</strong></div></td>
+       <td colspan="3"><div align="center"><strong>Functions and Methods</strong></div></td>
+       <td colspan="3"><div align="center"><strong>Classes and Traits</strong></div></td>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td class="warning">Total</td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="54.29" aria-valuemin="0" aria-valuemax="100" style="width: 54.29%">
+           <span class="sr-only">54.29% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">54.29%</div></td>
+       <td class="warning small"><div align="right">19&nbsp;/&nbsp;35</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="28.57" aria-valuemin="0" aria-valuemax="100" style="width: 28.57%">
+           <span class="sr-only">28.57% covered (danger)</span>
+         </div>
+       </div>
+</td>
+       <td class="danger small"><div align="right">28.57%</div></td>
+       <td class="danger small"><div align="right">2&nbsp;/&nbsp;7</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
+         </div>
+       </div>
+</td>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
+      </tr>
+
+      <tr>
+       <td class="warning"><img src="_icons/file-code.svg" class="octicon" /><a href="BlueTape.php.html">BlueTape.php</a></td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="54.29" aria-valuemin="0" aria-valuemax="100" style="width: 54.29%">
+           <span class="sr-only">54.29% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">54.29%</div></td>
+       <td class="warning small"><div align="right">19&nbsp;/&nbsp;35</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="28.57" aria-valuemin="0" aria-valuemax="100" style="width: 28.57%">
+           <span class="sr-only">28.57% covered (danger)</span>
+         </div>
+       </div>
+</td>
+       <td class="danger small"><div align="right">28.57%</div></td>
+       <td class="danger small"><div align="right">2&nbsp;/&nbsp;7</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
+         </div>
+       </div>
+</td>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
+      </tr>
+
+
+     </tbody>
+    </table>
+   </div>
+   <footer>
+    <hr/>
+    <h4>Legend</h4>
+    <p>
+     <span class="danger"><strong>Low</strong>: 0% to 50%</span>
+     <span class="warning"><strong>Medium</strong>: 50% to 90%</span>
+     <span class="success"><strong>High</strong>: 90% to 100%</span>
+    </p>
+    <p>
+     <small>Generated by <a href="https://github.com/sebastianbergmann/php-code-coverage" target="_top">php-code-coverage 7.0.1</a> using <a href="https://secure.php.net/" target="_top">PHP 7.2.4</a> with <a href="https://xdebug.org/">Xdebug 2.7.0beta1</a> at Thu Feb 14 6:51:09 CET 2019.</small>
+    </p>
+   </footer>
+  </div>
+ </body>
+</html>
