--- a/www/application/views/TestDocuments/code-coverage/BlueTape.php.html
+++ b/www/application/views/TestDocuments/code-coverage/BlueTape.php.html
@@ -52,22 +52,22 @@
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
        <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="28.57" aria-valuemin="0" aria-valuemax="100" style="width: 28.57%">
-           <span class="sr-only">28.57% covered (danger)</span>
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="42.86" aria-valuemin="0" aria-valuemax="100" style="width: 42.86%">
+           <span class="sr-only">42.86% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">28.57%</div></td>
-       <td class="danger small"><div align="right">2&nbsp;/&nbsp;7</div></td>
+       <td class="danger small"><div align="right">42.86%</div></td>
+       <td class="danger small"><div align="right">3&nbsp;/&nbsp;7</div></td>
        <td class="danger small"><abbr title="Change Risk Anti-Patterns (CRAP) Index">CRAP</abbr></td>
        <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="54.29" aria-valuemin="0" aria-valuemax="100" style="width: 54.29%">
-           <span class="sr-only">54.29% covered (warning)</span>
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="57.14" aria-valuemin="0" aria-valuemax="100" style="width: 57.14%">
+           <span class="sr-only">57.14% covered (warning)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">54.29%</div></td>
-       <td class="warning small"><div align="right">19&nbsp;/&nbsp;35</div></td>
+       <td class="warning small"><div align="right">57.14%</div></td>
+       <td class="warning small"><div align="right">20&nbsp;/&nbsp;35</div></td>
       </tr>
 
       <tr>
@@ -81,43 +81,43 @@
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
        <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="28.57" aria-valuemin="0" aria-valuemax="100" style="width: 28.57%">
-           <span class="sr-only">28.57% covered (danger)</span>
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="42.86" aria-valuemin="0" aria-valuemax="100" style="width: 42.86%">
+           <span class="sr-only">42.86% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">28.57%</div></td>
-       <td class="danger small"><div align="right">2&nbsp;/&nbsp;7</div></td>
-       <td class="danger small">68.24</td>
+       <td class="danger small"><div align="right">42.86%</div></td>
+       <td class="danger small"><div align="right">3&nbsp;/&nbsp;7</div></td>
+       <td class="danger small">60.10</td>
        <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="54.29" aria-valuemin="0" aria-valuemax="100" style="width: 54.29%">
-           <span class="sr-only">54.29% covered (warning)</span>
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="57.14" aria-valuemin="0" aria-valuemax="100" style="width: 57.14%">
+           <span class="sr-only">57.14% covered (warning)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">54.29%</div></td>
-       <td class="warning small"><div align="right">19&nbsp;/&nbsp;35</div></td>
+       <td class="warning small"><div align="right">57.14%</div></td>
+       <td class="warning small"><div align="right">20&nbsp;/&nbsp;35</div></td>
       </tr>
 
       <tr>
-       <td class="danger" colspan="4">&nbsp;<a href="#7"><abbr title="getNPM($email, $default = NULL)">getNPM</abbr></a></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
+       <td class="success" colspan="4">&nbsp;<a href="#7"><abbr title="getNPM($email, $default = NULL)">getNPM</abbr></a></td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
-       <td class="danger small">3.07</td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80.00" aria-valuemin="0" aria-valuemax="100" style="width: 80.00%">
-           <span class="sr-only">80.00% covered (warning)</span>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">1&nbsp;/&nbsp;1</div></td>
+       <td class="success small">3</td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">80.00%</div></td>
-       <td class="warning small"><div align="right">4&nbsp;/&nbsp;5</div></td>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">5&nbsp;/&nbsp;5</div></td>
       </tr>
 
       <tr>
@@ -266,7 +266,7 @@
      <tr><td><div align="right"><a name="12"></a><a href="#12">12</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="comment">//&nbsp;2017&nbsp;ke&nbsp;atas</span></td></tr>
      <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 13" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="13"></a><a href="#13">13</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">substr</span><span class="keyword">(</span><span class="default">$email</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">0</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">10</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
      <tr><td><div align="right"><a name="14"></a><a href="#14">14</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
-     <tr class="danger"><td><div align="right"><a name="15"></a><a href="#15">15</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">$default</span><span class="keyword">;</span></td></tr>
+     <tr class="covered-by-large-tests popin"><td data-title="1 test covers line 15" data-content="&lt;ul&gt;&lt;li&gt;UnitTests&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true"><div align="right"><a name="15"></a><a href="#15">15</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">$default</span><span class="keyword">;</span></td></tr>
      <tr class="warning"><td><div align="right"><a name="16"></a><a href="#16">16</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
      <tr><td><div align="right"><a name="17"></a><a href="#17">17</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span></td></tr>
      <tr><td><div align="right"><a name="18"></a><a href="#18">18</a></div></td><td class="codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">getEmail</span><span class="keyword">(</span><span class="default">$npm</span><span class="keyword">,</span><span class="default">&nbsp;</span><span class="default">$default</span><span class="default">&nbsp;</span><span class="keyword">=</span><span class="default">&nbsp;</span><span class="default">NULL</span><span class="keyword">)</span><span class="default">&nbsp;</span><span class="keyword">{</span></td></tr>
@@ -362,7 +362,7 @@
      <span class="warning"><strong>Dead Code</strong></span>
     </p>
     <p>
-     <small>Generated by <a href="https://github.com/sebastianbergmann/php-code-coverage" target="_top">php-code-coverage 7.0.1</a> using <a href="https://secure.php.net/" target="_top">PHP 7.2.4</a> with <a href="https://xdebug.org/">Xdebug 2.7.0beta1</a> at Thu Feb 14 6:51:09 CET 2019.</small>
+     <small>Generated by <a href="https://github.com/sebastianbergmann/php-code-coverage" target="_top">php-code-coverage 7.0.1</a> using <a href="https://secure.php.net/" target="_top">PHP 7.2.4</a> with <a href="https://xdebug.org/">Xdebug 2.7.0beta1</a> at Thu Feb 14 7:17:31 CET 2019.</small>
     </p>
     <a title="Back to the top" id="toplink" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 11L6 5l-6 6h12z"/></svg>
