--- a/www/application/views/TestDocuments/TestTranskrip.html
+++ b/www/application/views/TestDocuments/TestTranskrip.html
@@ -1,5 +1,6 @@
 
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+        <table border="0"  cellpadding="4" cellspacing="1">
+        
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testRequestBy</td>
@@ -16,4 +17,39 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
-</table>
+                <tr>
+                        <td>{item}</td>
+                        <td>{result}</td>
+                </tr>
+         {/rows}
+                <br>
+         
+        
+        </table>
+        <table border="0"  cellpadding="4" cellspacing="1">
+        
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testRequestByID</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Object</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Object</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+                <tr>
+                        <td>{item}</td>
+                        <td>{result}</td>
+                </tr>
+         {/rows}
+                <br>
+         
+        
+        </table>
